# gtavc_service

./: CMakeLists.txt  README.md  ViceCityVR.sln
VanillaCore/: VanillaCore.cpp  VanillaCore.h  VanillaCore.vcxproj  VanillaCore.vcxproj.filters  cpp.hint
ViceCityVR/: VRNetwork.cpp  VRNetwork.h  ViceCityVR.cpp  ViceCityVR.vcxproj  ViceCityVR.vcxproj.filters
